2007-05-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/mainwindow.*: Mac interface fixes. Duplicate menu
	and toolbar actions for  new, open, save, close, quit. Remove
	icons from menu items. Fix bug 1720872: don't close the last
	MainWindow, hide it and disable menu items. Restore upon open or
	new.

2007-05-23  Donald E. Curtis <dcurtis3@sourceforge.net>

	* libavogadro/src/glwidget.*: Did a bunch of API cleanup.  I know i know.
	How you guys loath my long function names.  Moved from ::selection to
	::selectedPrimitives.  Now have ::setSelected and ::isSelect.  Thanks
	KDevelop for nice refactoring.  This naming method follows more of the Qt
	style "view" naming conventions (ie ::selectedItems).
	* .: Fixed a few compiler warnings.

2007-05-22  Donald E. Curtis <dcurtis3@sourceforge.net>

	* avogadro/src/enginetabwidget.*: Now uses a .ui file to design the
	widget.  this is much easier.
	* avogadro/src/primitivetreeview.*: Added the PrimitiveTreeView class as a
	helper class for displaying PrimitiveItemModels.  Just looks a bit
	prettier.
	* libavogadro/src/primitivelist.*: Added the ::contains(Primitive *)
	operator for checking if a primitive is already in the list.
	* .: Lots of other stuff for doing selective rendering.

2007-05-22  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/mainwindow.cpp: Fix bug 1722691. Show preferences
	in the correct spot on Mac.

2007-05-21  Donald E. Curtis <dcurtis3@sourceforge.net>
	
	* .: Refactored PrimitiveQueue -> PrimitiveList.  Within the class renamed
	::primitiveQueue to ::subList which returns a subList based on type.
	Fixed changes due to refactoring in various files.

	* libavogadro/src/primitive.h: Fixed compiler warnings.
	* libavogadro/src/glwidget.cpp: Fixed compiler warnings.
	* libavogadro/src/color.cpp: Added virtual deconstructor and reformatted.
	* libavogadro/src/engines/bsdyengine.cpp: Fixed compiler warnings.